--- a/themes/hc-starter/layouts/partials/header.html
+++ b/themes/hc-starter/layouts/partials/header.html
@@ -35,7 +35,7 @@
     {{ if isset .Params "feature" }}
     <meta property="og:image" content="{{ .Params.feature }}">
     {{ else }}
-    <meta property="og:image" content="https://res.cloudinary.com/harrycresswell/image/upload/w_700,dpr_2.0,c_scale,f_auto,q_auto/v1550264713/hc/harry-cresswell-about-me.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/azhar932/image/upload/w_700,dpr_2.0,c_scale,f_auto,q_auto/v1580172324/M1/maxresdefault_rc9tep.jpg">
     {{ end }}
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -72,9 +72,9 @@
     <div class="Title">
       <a class="p-name u-url" rel="me" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       <div hidden>
-          <img class="u-photo" src="https://harrycresswell.com/img/hc.jpg" alt="Harry Cresswell">
+          <img class="u-photo" src="https://azharkhan.in/img/hc.jpg" alt="Azhar Khan">
           <p class="p-note">{{ .Site.Params.Strapline }}</p>
-          <a href="mailto:studio@harrycresswell.com" rel="me" class="u-email">studio@harrycresswell.com</a>
+          <a href="mailto:akhan362@uottawa.ca" rel="me" class="u-email">akhan362@uottawa.ca</a>
       </div>
     </div>
     <nav class="Nav">
