--- a/themes/hc-starter/layouts/projects/list.html
+++ b/themes/hc-starter/layouts/projects/list.html
@@ -12,7 +12,7 @@
     </h3>
     <p class="PostDescription">{{ .Description | markdownify }}</p>
     <div hidden>
-      <a rel="author" class="p-author h-card" href="{{ $.Site.BaseURL }}">Harry Cresswell</a>
+      <a rel="author" class="p-author h-card" href="{{ $.Site.BaseURL }}">Azhar Khan</a>
     </div>
   </article>
   {{ end }}
