--- a/themes/hc-starter/layouts/_default/baseof.html
+++ b/themes/hc-starter/layouts/_default/baseof.html
@@ -6,6 +6,6 @@
 
     </main>
 
-    <!--{{ partial "newsletter.html" . }}-->
+    {{ partial "newsletter.html" . }}
 
 {{ partialCached "footer.html" . .Type }}
