--- a/themes/hc-starter/layouts/partials/post/author.html
+++ b/themes/hc-starter/layouts/partials/post/author.html
@@ -1,18 +1,17 @@
 <!-- Post Author. -->
 <div class="PostAuthor">
-    <img class="Avatar Avatar--round Avatar--m u-photo" src="https://azharkhan.in/img/hc.jpg"
-        alt="Azhar Khan">
-    <div class="PostAuthor-text">
-        <h4>Did you enjoy this?</h4>
-        <p>If so, you can always help me <a href="https://www.paypal.me/azhrkhn">buy</a> my morning coffee.</p>
-    </div>
+  <img alt="Harry Cresswell" class="Avatar Avatar--round Avatar--m u-photo" src="https://harrycresswell.com/img/hc.jpg">
+  <div class="PostAuthor-text">
+    <h4>Did you enjoy this?</h4>
+    <p>Sign up for my newsletter below &darr;</p>
+  </div>
 </div>
 
 <!-- Microformat2 data -->
 <div hidden>
-    <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
-    <p class="h-card p-author">
-        <a class="p-name u-url" href="{{ $.Site.BaseURL }}" rel="author">Azhar Khan</a>
-        <img class="u-photo" src="https://azharkhan.in/img/hc.jpg" alt="Azhar Khan">
-    </p>
+  <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
+  <p class="h-card p-author">
+    <a class="p-name u-url" href="{{ $.Site.BaseURL }}" rel="author">Harry Cresswell</a>
+    <img alt="Harry Cresswell" class="u-photo" src="https://harrycresswell.com/img/hc.jpg">
+  </p>
 </div>
