--- a/themes/hc-starter/layouts/partials/footer.html
+++ b/themes/hc-starter/layouts/partials/footer.html
@@ -6,10 +6,7 @@
         href="{{.URL}}">{{ .Name }}</a>
       {{ end }}
     </nav>
-    <p>Content &copy;{{ now.Format "2006"}} Harry Cresswell, unless otherwise specified. Subscribe to RSS Feeds for <a
-        href="{{ $.Site.BaseURL }}feed.xml">all content</a>, <a
-        href="{{ $.Site.BaseURL }}articles/feed.xml">articles</a> or <a
-        href="{{ $.Site.BaseURL }}notes/feed.xml">notes</a>.</p>
+    <p>Content &copy;{{ now.Format "2006"}} Azhar Khan, unless otherwise specified.
   </footer>
 
   <!-- Store JS files independently -->
