--- a/themes/hc-starter/layouts/partials/footer.html
+++ b/themes/hc-starter/layouts/partials/footer.html
@@ -29,7 +29,7 @@
   <script src="{{ $globalJS.Permalink }}" integrity="{{ $globalJS.Data.Integrity }}" media="screen"></script>
   <script>
     var cl = cloudinary.Cloudinary.new({
-      cloud_name: "harrycresswell"
+      cloud_name: "azhar932"
     });
 
     cl.responsive();
