--- a/themes/hc-starter/layouts/partials/header.html
+++ b/themes/hc-starter/layouts/partials/header.html
@@ -26,9 +26,9 @@
     <!-- if featured image exists in file frontmatter, use for open graph data -->
     {{ if isset .Params "feature" }}
     <meta property="og:image" content="{{ .Params.feature }}">
-    <!-- else if no image in frontmatter, and sections are not equal to articles or notes, then display image --> 
+    <!-- else if no image in frontmatter, and sections are not equal to articles or notes, then display image -->
     {{ else if and (ne .Section "articles") (ne .Section "notes") }}
-    <meta property="og:image" content="https://res.cloudinary.com/harrycresswell/image/upload/w_700,dpr_2.0,c_scale,f_auto,q_auto/v1550264713/hc/harry-cresswell-about-me.jpg">
+    <meta property="og:image" content="https://res.cloudinary.com/azhar932/image/upload/w_700,dpr_2.0,c_scale,f_auto,q_auto/v1580172324/M1/maxresdefault_rc9tep.jpg">
     {{ end }}
     <!-- Pinterest Verification -->
     <meta name="p:domain_verify" content="c60dc1e9be844be29f0fb5525b9afe6f"/>
@@ -36,7 +36,7 @@
     <meta name="google-site-verification" content="9G-wiIrmxQgDxbcs3a3xPW--q3Mxb1VGFN7BsEfJdDk" />
     <!-- Disable save to Pintrest button on images -->
     <meta name="pinterest" content="nopin" />
-    <!-- Me -->    
+    <!-- Me -->
     {{ with .Site.Author.name }}<meta name="author" content="{{ . }}">{{ end }}
     <link href="mailto:{{ .Site.Author.email }}" rel="me">
     <link href="{{ .Site.Author.twitter }}" rel="me">
@@ -75,9 +75,9 @@
     <div class="Title">
       <a class="p-name u-url" rel="me" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
       <div hidden>
-          <img class="u-photo" src="https://harrycresswell.com/img/hc.jpg" alt="Harry Cresswell">
+          <img class="u-photo" src="https://azharkhan.in/img/hc.jpg" alt="Azhar Khan">
           <p class="p-note">{{ .Site.Params.Strapline }}</p>
-          <a href="mailto:studio@harrycresswell.com" rel="me" class="u-email">studio@harrycresswell.com</a>
+          <a href="mailto:akhan362@uottawa.ca" rel="me" class="u-email">akhan362@uottawa.ca</a>
       </div>
     </div>
     <nav class="Nav" aria-label="Main Navigation">
