--- a/themes/hc-starter/layouts/partials/post/author.html
+++ b/themes/hc-starter/layouts/partials/post/author.html
@@ -1,9 +1,9 @@
 <!-- Post Author. -->
 <div class="PostAuthor">
-  <img alt="Harry Cresswell" class="Avatar Avatar--round Avatar--m u-photo" src="https://harrycresswell.com/img/hc.jpg">
+  <img alt="Azhar Khan" class="Avatar Avatar--round Avatar--m u-photo" src="https://azharkhan.in/img/hc.jpg">
   <div class="PostAuthor-text">
     <h4>Did you enjoy this?</h4>
-    <p>Sign up for my newsletter below &darr;</p>
+    <p>If so, you can always help me <a href="https://www.paypal.me/azhrkhn">buy</a> my morning coffee.</p>
   </div>
 </div>
 
@@ -11,7 +11,7 @@
 <div hidden>
   <a class="u-url" href="{{ .Permalink }}">{{ .Title }}</a>
   <p class="h-card p-author">
-    <a class="p-name u-url" href="{{ $.Site.BaseURL }}" rel="author">Harry Cresswell</a>
-    <img alt="Harry Cresswell" class="u-photo" src="https://harrycresswell.com/img/hc.jpg">
+    <a class="p-name u-url" href="{{ $.Site.BaseURL }}" rel="author">Azhar Khan</a>
+    <img alt="Azhar Khan" class="u-photo" src="https://azharkhan.in/img/hc.jpg">
   </p>
 </div>
