--- a/themes/hc-starter/layouts/partials/header.html
+++ b/themes/hc-starter/layouts/partials/header.html
@@ -5,7 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-		{{ template "_internal/google_analytics.html" . }}
     <!-- Titles -->
     <title>{{ if .IsHome -}}{{ .Site.Title }} &middot; {{ $.Site.Params.strapline }}{{- else -}}{{ .Title }} | {{ .Site.Title }} &middot; {{ $.Site.Params.strapline }} {{- end }}</title>
     <meta name="title" content="{{ if .IsHome -}}{{ .Site.Title }} &middot; {{ $.Site.Params.strapline }}{{- else -}}{{ .Title }} | {{ .Site.Title }} &middot; {{ $.Site.Params.strapline }} {{- end }}">
@@ -30,7 +29,7 @@
     <meta property="og:image" content="{{ .Params.feature }}">
     <!-- else if no image in frontmatter, and sections are not equal to articles or notes, then display image -->
     {{ else if and (ne .Section "articles") (ne .Section "notes") }}
-    <meta property="og:image" content="https://res.cloudinary.com/harrycresswell/image/upload/w_700,dpr_2.0,c_scale,f_auto,q_auto/v1550264713/hc/harry-cresswell-about-me.jpg">
+    <meta property="og:image" content="https://azharkhan.in/img/hc.jpg">
     {{ end }}
     <!-- Pinterest Verification -->
     <meta name="p:domain_verify" content="c60dc1e9be844be29f0fb5525b9afe6f"/>
@@ -45,8 +44,8 @@
     <link href="{{ .Site.Author.github }}" rel="me">
     <link href="{{ .Site.Author.linkedin }}" rel="me">
     <!-- IndieCert -->
-    <link rel="webmention" href="https://webmention.io/harrycresswell.com/webmention" />
-    <link rel="pingback" href="https://webmention.io/harrycresswell.com/xmlrpc" />
+    <link rel="webmention" href="" />
+    <link rel="pingback" href="" />
     <!-- Styles -->
     {{ if .Site.IsServer }}
       <!-- Pipe Sass to CSS, include options, enable sourcemaps -->
