--- a/themes/hc-starter/layouts/partials/social.html
+++ b/themes/hc-starter/layouts/partials/social.html
@@ -4,7 +4,7 @@
       <span class="visually-hidden"></span>
       {{ partial "svg/twitter.html" . }}
     </a>
-    <a style="background-color:white; text-decoration:none" href="https://www.linkedin.com/in/Azhar93">
+    <a style="background-color:white; text-decoration:none" href="https://www.linkedin.com/in/Azhrkhn">
       <span class="visually-hidden"></span>
       {{ partial "svg/linkedin.html" . }}
     </a>
