--- a/themes/hc-starter/layouts/partials/post/author.html
+++ b/themes/hc-starter/layouts/partials/post/author.html
@@ -4,7 +4,7 @@
         alt="Azhar Khan">
     <div class="PostAuthor-text">
         <h4>Did you enjoy this?</h4>
-        <p>If so, consider <a href="https://www.paypal.me/azhrkhn">pitching</a> in for my extremely <br>exorbitant Canadian internet bills.</p>
+        <p>If so, consider <a href="https://www.paypal.me/azhrkhn">pitching</a> in <br>for my internet bills.</p>
     </div>
 </div>
 
