--- a/themes/hc-starter/layouts/partials/social.html
+++ b/themes/hc-starter/layouts/partials/social.html
@@ -1,6 +1,6 @@
 <div class="Social">
   <div class="Social-icon" style="text-align: right">
-    <a style="background-color:white; text-decoration:none" href="https://twitter.com/AzharCan">
+    <a style="background-color:white; text-decoration:none" href="https://twitter.com/imazhrkhn">
       <span class="visually-hidden"></span>
       {{ partial "svg/twitter.html" . }}
     </a>
